--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4647,472 +4647,40 @@ input, select, textarea {
 				font-size: 0.8rem;
 			}
 
-				.gallery.style1 article .caption a {
-					pointer-events: auto;
-				}
+				.gallery.style1 article .caption a { pointer-events: auto; }
+				.gallery.style1 article .caption h2, .gallery.style1 article .caption h3, .gallery.style1 article .caption h4, .gallery.style1 article .caption h5, .gallery.style1 article .caption h6 { font-size: 1.25rem; margin-bottom: 0.25rem; }
+				.gallery.style1 article .caption > * { max-width: 100%; margin-bottom: 1rem; }
+				.gallery.style1 article .caption > :last-child { margin-bottom: 0; }
+			.gallery.style1 article:hover .caption { opacity: 1; }
 
-				.gallery.style1 article .caption h2, .gallery.style1 article .caption h3, .gallery.style1 article .caption h4, .gallery.style1 article .caption h5, .gallery.style1 article .caption h6 {
-					font-size: 1.25rem;
-					margin-bottom: 0.25rem;
-				}
-
-				.gallery.style1 article .caption > * {
-					max-width: 100%;
-					margin-bottom: 1rem;
-				}
-
-				.gallery.style1 article .caption > :last-child {
-					margin-bottom: 0;
-				}
-
-			.gallery.style1 article:hover .caption {
-				opacity: 1;
+ 			/* Caption Display on Mobile */
+			.gallery.style1 article.show-caption .caption {
+			    opacity: 1;
+			    pointer-events: auto;
 			}
 
-		@media screen and (max-width: 1280px) {
-
-			.gallery.style1 article {
-				width: 33.33333%;
-			}
-
-				.gallery.style1 article .caption {
-					padding: 1rem;
-				}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			.gallery.style1 article {
-				width: 50%;
-			}
-
-				.gallery.style1 article .caption {
-					padding: 1rem;
-				}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			.gallery.style1 article {
-				width: 100%;
-			}
-
-				.gallery.style1 article .caption {
-					padding: 1rem;
-				}
-
-		}
-
-		.gallery.style1.small article {
-			width: 20%;
-		}
-
-			.gallery.style1.small article .caption {
-				padding: 1rem;
-			}
-
-		@media screen and (max-width: 1280px) {
-
-			.gallery.style1.small article {
-				width: 25%;
-			}
-
-				.gallery.style1.small article .caption {
-					padding: 1rem;
-				}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			.gallery.style1.small article {
-				width: 33.33333%;
-			}
-
-				.gallery.style1.small article .caption {
-					padding: 1rem;
-				}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			.gallery.style1.small article {
-				width: 50%;
-			}
-
-				.gallery.style1.small article .caption {
-					padding: 1rem;
-				}
-
-		}
-
-		.gallery.style1.big article {
-			width: 33.33333%;
-		}
-
-			.gallery.style1.big article .caption {
-				padding: 3rem;
-			}
-
-		@media screen and (max-width: 1280px) {
-
-			.gallery.style1.big article {
-				width: 50%;
-			}
-
-				.gallery.style1.big article .caption {
-					padding: 2rem;
-				}
-
-		}
-
-		@media screen and (max-width: 980px) {
-
-			.gallery.style1.big article {
-				width: 50%;
-			}
-
-				.gallery.style1.big article .caption {
-					padding: 2rem;
-				}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			.gallery.style1.big article {
-				width: 100%;
-			}
-
-				.gallery.style1.big article .caption {
-					padding: 1rem;
-				}
-
-		}
-
-/* Gallery (style2) */
-
-	.gallery.style2 {
-		background-color: #095a27;
-		color: #ffffff;
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-webkit-overflow-scrolling: touch;
-		position: relative;
-		background-color: transparent;
-	}
-
-		.gallery.style2 input, .gallery.style2 select, .gallery.style2 textarea {
-			color: #ffffff;
-		}
-
-		.gallery.style2 a {
-			color: #ffffff;
-		}
-
-			.gallery.style2 a:hover {
-				color: #ffffff;
-			}
-
-		.gallery.style2 strong, .gallery.style2 b {
-			color: #ffffff;
-		}
-
-		.gallery.style2 h1, .gallery.style2 h2, .gallery.style2 h3, .gallery.style2 h4, .gallery.style2 h5, .gallery.style2 h6 {
-			color: #ffffff;
-		}
-
-		.gallery.style2 blockquote {
-			border-left-color: white;
-		}
-
-		.gallery.style2 code {
-			background: rgba(255, 255, 255, 0.125);
-			border-color: white;
-		}
-
-		.gallery.style2 hr {
-			border-bottom-color: white;
-		}
-
-		.gallery.style2 input[type="submit"],
-		.gallery.style2 input[type="reset"],
-		.gallery.style2 input[type="button"],
-		.gallery.style2 button,
-		.gallery.style2 .button {
-			background-color: transparent;
-			box-shadow: inset 0 0 0 1px white;
-			color: #ffffff !important;
-		}
-
-			.gallery.style2 input[type="submit"]:hover,
-			.gallery.style2 input[type="reset"]:hover,
-			.gallery.style2 input[type="button"]:hover,
-			.gallery.style2 button:hover,
-			.gallery.style2 .button:hover {
-				box-shadow: inset 0 0 0 1px #ffffff;
-				color: #ffffff !important;
-			}
-
-			.gallery.style2 input[type="submit"]:active,
-			.gallery.style2 input[type="reset"]:active,
-			.gallery.style2 input[type="button"]:active,
-			.gallery.style2 button:active,
-			.gallery.style2 .button:active {
-				background-color: rgba(255, 255, 255, 0.2);
-				box-shadow: inset 0 0 0 1px #ffffff;
-				color: #ffffff !important;
-			}
-
-			.gallery.style2 input[type="submit"].primary,
-			.gallery.style2 input[type="reset"].primary,
-			.gallery.style2 input[type="button"].primary,
-			.gallery.style2 button.primary,
-			.gallery.style2 .button.primary {
-				background-color: #ffffff;
-				box-shadow: none;
-				color: #095a27 !important;
-			}
-
-				.gallery.style2 input[type="submit"].primary:hover,
-				.gallery.style2 input[type="reset"].primary:hover,
-				.gallery.style2 input[type="button"].primary:hover,
-				.gallery.style2 button.primary:hover,
-				.gallery.style2 .button.primary:hover {
-					background-color: #ffffff;
-				}
-
-				.gallery.style2 input[type="submit"].primary:active,
-				.gallery.style2 input[type="reset"].primary:active,
-				.gallery.style2 input[type="button"].primary:active,
-				.gallery.style2 button.primary:active,
-				.gallery.style2 .button.primary:active {
-					background-color: #095a27;
-				}
-
-		.gallery.style2 > .forward, .gallery.style2 > .backward {
-			text-decoration: none;
-			-moz-transition: opacity 0.2s ease-in-out;
-			-webkit-transition: opacity 0.2s ease-in-out;
-			-ms-transition: opacity 0.2s ease-in-out;
-			transition: opacity 0.2s ease-in-out;
-			position: absolute;
-			top: 0;
-			width: 5rem;
-			height: 100%;
-			cursor: pointer;
-			opacity: 0;
-			z-index: 2;
-		}
-
-			.gallery.style2 > .forward:before, .gallery.style2 > .backward:before {
-				-moz-osx-font-smoothing: grayscale;
-				-webkit-font-smoothing: antialiased;
-				display: inline-block;
-				font-style: normal;
-				font-variant: normal;
-				text-rendering: auto;
-				line-height: 1;
-				text-transform: none !important;
-				font-family: 'Font Awesome 5 Free';
-				font-weight: 900;
-			}
-
-			.gallery.style2 > .forward:before, .gallery.style2 > .backward:before {
-				display: block;
-				top: calc(50% - 1.5rem);
-				width: 4rem;
-				height: 3rem;
-				line-height: 1em;
-				font-size: 3rem;
-				position: absolute;
-				text-align: center;
-			}
-
-		.gallery.style2:hover > .forward, .gallery.style2:hover > .backward {
-			opacity: 1;
-		}
-
-		.gallery.style2 > .forward {
-			right: 0;
-			background-image: linear-gradient(to left, rgba(9, 90, 39, 0.25) 15%, rgba(9, 90, 39, 0));
-		}
-
-			.gallery.style2 > .forward:before {
-				content: '\f105';
-				right: 0;
-			}
-
-		.gallery.style2 > .backward {
-			left: 0;
-			background-image: linear-gradient(to right, rgba(9, 90, 39, 0.25) 15%, rgba(9, 90, 39, 0));
-		}
-
-			.gallery.style2 > .backward:before {
-				content: '\f104';
-				left: 0;
-			}
-
-		.gallery.style2 > .inner {
-			display: inherit;
-			overflow-x: auto;
-			overflow-y: hidden;
-			position: relative;
-			width: 100%;
-		}
-
-		.gallery.style2 article {
-			-moz-flex-grow: 0;
-			-webkit-flex-grow: 0;
-			-ms-flex-grow: 0;
-			flex-grow: 0;
-			-moz-flex-shrink: 0;
-			-webkit-flex-shrink: 0;
-			-ms-flex-shrink: 0;
-			flex-shrink: 0;
-			display: block;
-			position: relative;
-			overflow: hidden;
-			width: 22.5rem;
-			max-width: 75vw;
-		}
-
-			.gallery.style2 article .image {
-				display: block;
-				width: 100%;
-				border-radius: 0;
-			}
-
-				.gallery.style2 article .image img {
-					display: block;
-					width: 100%;
-					border-radius: 0;
-				}
-
-			.gallery.style2 article .caption {
-				-moz-align-items: center;
-				-webkit-align-items: center;
-				-ms-align-items: center;
-				align-items: center;
-				display: -moz-flex;
-				display: -webkit-flex;
-				display: -ms-flex;
-				display: flex;
-				-moz-flex-direction: column;
-				-webkit-flex-direction: column;
-				-ms-flex-direction: column;
-				flex-direction: column;
-				-moz-justify-content: center;
-				-webkit-justify-content: center;
-				-ms-justify-content: center;
-				justify-content: center;
-				pointer-events: none;
-				-moz-transition: opacity 0.2s ease-in-out;
-				-webkit-transition: opacity 0.2s ease-in-out;
-				-ms-transition: opacity 0.2s ease-in-out;
-				transition: opacity 0.2s ease-in-out;
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background-color: rgba(9, 90, 39, 0.5);
-				opacity: 0;
-				padding: 3rem;
-				z-index: 1;
-				font-size: 0.8rem;
-			}
-
-				.gallery.style2 article .caption a {
-					pointer-events: auto;
-				}
-
-				.gallery.style2 article .caption h2, .gallery.style2 article .caption h3, .gallery.style2 article .caption h4, .gallery.style2 article .caption h5, .gallery.style2 article .caption h6 {
-					font-size: 1.25rem;
-					margin-bottom: 0.25rem;
-				}
-
-				.gallery.style2 article .caption > * {
-					max-width: 100%;
-					margin-bottom: 1rem;
-				}
-
-				.gallery.style2 article .caption > :last-child {
-					margin-bottom: 0;
-				}
-
-			.gallery.style2 article:hover .caption {
-				opacity: 1;
-			}
-
-		@media screen and (max-width: 980px) {
-
-			.gallery.style2 article .caption {
-				padding: 2rem;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.gallery.style2 article .caption {
-				padding: 2rem;
-			}
-
-		}
-
-		.gallery.style2.small article {
-			width: 17.5rem;
-		}
-
-			.gallery.style2.small article .caption {
-				padding: 2rem;
-			}
-
-		@media screen and (max-width: 980px) {
-
-			.gallery.style2.small article .caption {
-				padding: 2rem;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.gallery.style2.small article .caption {
-				padding: 2rem;
-			}
-
-		}
-
-		.gallery.style2.big article {
-			width: 30rem;
-		}
-
-			.gallery.style2.big article .caption {
-				padding: 4rem;
-			}
-
-		@media screen and (max-width: 980px) {
-
-			.gallery.style2.big article .caption {
-				padding: 3rem;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
-
-			.gallery.style2.big article .caption {
-				padding: 2rem;
-			}
-
-		}
+		@media screen and (max-width: 1280px) { .gallery.style1 article { width: 33.33333%; }
+				.gallery.style1 article .caption { padding: 1rem; } }
+		@media screen and (max-width: 980px) { .gallery.style1 article { width: 50%; }
+				.gallery.style1 article .caption { padding: 1rem; } }
+		@media screen and (max-width: 480px) { .gallery.style1 article { width: 100%; }
+				.gallery.style1 article .caption { padding: 1rem; } }
+		.gallery.style1.small article { width: 20%; }
+			.gallery.style1.small article .caption { padding: 1rem; }
+		@media screen and (max-width: 1280px) { .gallery.style1.small article { width: 25%; }
+				.gallery.style1.small article .caption { padding: 1rem; } }
+		@media screen and (max-width: 980px) { .gallery.style1.small article { width: 33.33333%; }
+				.gallery.style1.small article .caption { padding: 1rem; } }
+		@media screen and (max-width: 480px) { .gallery.style1.small article { width: 50%; }
+				.gallery.style1.small article .caption { padding: 1rem; } }
+		.gallery.style1.big article { width: 33.33333%; }
+			.gallery.style1.big article .caption { padding: 3rem; }
+		@media screen and (max-width: 1280px) { .gallery.style1.big article { width: 50%; }
+				.gallery.style1.big article .caption { padding: 2rem; } }
+		@media screen and (max-width: 980px) { .gallery.style1.big article { width: 50%; }
+				.gallery.style1.big article .caption { padding: 2rem; } }
+		@media screen and (max-width: 480px) { .gallery.style1.big article { width: 100%; }
+				.gallery.style1.big article .caption { padding: 1rem; } }
 
 /* Gallery (lightbox) */
 
@@ -6665,4 +6233,5 @@ input, select, textarea {
 			#wrapper.divided > *:first-child { box-shadow: none !important; }
 		#wrapper.divided > .invert { box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.125); }
 			#wrapper.divided > .invert:first-child { box-shadow: none !important; }
+
 
