--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6251,81 +6251,24 @@ input, select, textarea {
 				box-shadow: 0 0 0 1px #ffffff;
 			}
 
-			#wrapper > .invert ::-webkit-input-placeholder {
-				color: #ffffff !important;
-			}
-
-			#wrapper > .invert :-moz-placeholder {
-				color: #ffffff !important;
-			}
-
-			#wrapper > .invert ::-moz-placeholder {
-				color: #ffffff !important;
-			}
-
-			#wrapper > .invert :-ms-input-placeholder {
-				color: #ffffff !important;
-			}
-
-			#wrapper > .invert .icon.style2:before {
-				box-shadow: inset 0 0 0 1px white;
-			}
-
-			#wrapper > .invert a.icon.style2:hover:before {
-				box-shadow: inset 0 0 0 1px #119130;
-				color: #119130;
-			}
-
-			#wrapper > .invert a.icon.style2:active:before {
-				background-color: rgba(255, 255, 255, 0.1);
-				box-shadow: inset 0 0 0 1px #ffffff;
-				color: #ffffff;
-			}
-
-			#wrapper > .invert ul.alt li {
-				border-top-color: white;
-			}
-
-			#wrapper > .invert header p {
-				color: #ffffff;
-			}
-
-			#wrapper > .invert table tbody tr {
-				border-color: white;
-			}
-
-				#wrapper > .invert table tbody tr:nth-child(2n + 1) {
-					background-color: rgba(255, 255, 255, 0.125);
-				}
-
-				#wrapper > .invert table tbody tr.alt {
-					background-color: rgba(255, 255, 255, 0.125) !important;
-				}
-
-			#wrapper > .invert table th {
-				color: #ffffff;
-			}
-
-			#wrapper > .invert table thead {
-				border-bottom-color: white;
-			}
-
-			#wrapper > .invert table tfoot {
-				border-top-color: white;
-			}
-
-			#wrapper > .invert table.alt tbody tr td {
-				border-color: white;
-			}
-
-			#wrapper > .invert table.uniform tbody tr:nth-child(2n + 1) {
-				background-color: transparent;
-			}
-
-			#wrapper > .invert .banner .image {
-				background-color: rgba(255, 255, 255, 0.125);
-			}
-
+			#wrapper > .invert ::-webkit-input-placeholder { color: #ffffff !important; }
+			#wrapper > .invert :-moz-placeholder { color: #ffffff !important; }
+			#wrapper > .invert ::-moz-placeholder { color: #ffffff !important; }
+			#wrapper > .invert :-ms-input-placeholder { color: #ffffff !important; }
+			#wrapper > .invert .icon.style2:before { box-shadow: inset 0 0 0 1px white; }
+			#wrapper > .invert a.icon.style2:hover:before { box-shadow: inset 0 0 0 1px #119130; color: #119130; }
+			#wrapper > .invert a.icon.style2:active:before { background-color: rgba(255, 255, 255, 0.1); box-shadow: inset 0 0 0 1px #ffffff; color: #ffffff; }
+			#wrapper > .invert ul.alt li { border-top-color: white; }
+			#wrapper > .invert header p { color: #ffffff; }
+			#wrapper > .invert table tbody tr { border-color: white; }
+				#wrapper > .invert table tbody tr:nth-child(2n + 1) { background-color: rgba(255, 255, 255, 0.125); }
+				#wrapper > .invert table tbody tr.alt { background-color: rgba(255, 255, 255, 0.125) !important; }
+			#wrapper > .invert table th { color: #ffffff; }
+			#wrapper > .invert table thead { border-bottom-color: white; }
+			#wrapper > .invert table tfoot { border-top-color: white; }
+			#wrapper > .invert table.alt tbody tr td { border-color: white; }
+			#wrapper > .invert table.uniform tbody tr:nth-child(2n + 1) { background-color: transparent; }
+			#wrapper > .invert .banner .image { background-color: rgba(255, 255, 255, 0.125); }
 			#wrapper > .invert .banner.style4 .image {
 				border-color: white;
 				background-color: white;
@@ -6457,17 +6400,11 @@ input, select, textarea {
   width: 180px;
 }
 
-.search-bar input:focus {
-  width: 250px;
-}
-
 .search-bar button {
   position: absolute;
   right: 12px;
   background: none;
   border: none;
-  outline: none;
-  box-shadow: none;
   color: #777;
   cursor: pointer;
   padding: 0;
@@ -6475,14 +6412,9 @@ input, select, textarea {
   width: auto;
 }
 
-.search-bar button i {
-  font-size: 1rem;
-}
-
 .hamburger {
   background: none;
   border: none;
-  outline: none;
   font-size: 1.2rem;
   color: #333;
   cursor: pointer;
@@ -6496,20 +6428,19 @@ input, select, textarea {
   transition: all 0.3s ease;
 }
 
-/* Mobile Menu */
-.mobile-menu-content {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  background: white;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-  padding: 1rem;
-  z-index: 1000;
+.hamburger:hover {
+  background-color: #f0f0f0;
+}
+
+.mobile-menu { 
+  display: none; 
 }
 
 @media (max-width: 768px) {
+  .desktop-menu { 
+    display: none; 
+  }
+  
   .search-bar input {
     width: 40px;
     padding-left: 35px;
@@ -6587,5 +6518,3 @@ input, select, textarea {
   color: #888;
   font-size: 0.9rem;
 }
-
-
