--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -58,34 +58,13 @@ input, select, textarea {
 
 /* Basic */
 
-	@-ms-viewport {
-		width: device-width;
-	}
-
-	body {
-		-ms-overflow-style: scrollbar;
-	}
-
-	@media screen and (max-width: 480px) {
-
-		html, body {
-			min-width: 320px;
-		}
-
-	}
-
-	html {
-		box-sizing: border-box;
-	}
-
-	*, *:before, *:after {
-		box-sizing: inherit;
-	}
-
-	body {
-		background: #ffffff;
-	}
-
+	@-ms-viewport { width: device-width; }
+	body { -ms-overflow-style: scrollbar; }
+	html { scroll-behavior: smooth; }
+	@media screen and (max-width: 480px) { html, body { min-width: 320px; }	}
+	html { box-sizing: border-box; }
+	*, *:before, *:after { box-sizing: inherit; }
+	body { background: #ffffff; }
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 			-moz-animation: none !important;
 			-webkit-animation: none !important;
@@ -6602,6 +6581,7 @@ input, select, textarea {
   color: #888;
   font-size: 0.9rem;
 }
+
 
 
 
